examples/bench/bad/typing/generalize2.mlw

predicate p(x:'a) = x=0
